--- a/myapp/.env
+++ b/myapp/.env
@@ -1,5 +1,5 @@
 
 DBHOST="servidorgha5.com"
-DBUSER="supervisor6573_adminmarco"
-DBPASS="O{oh7nVx-*,}0Yyn"
-DBNAME="supervisor6573_marco"
+DBUSER="supervisor6573_CesaRomero"
+DBPASS="Jucerota8+"
+DBNAME="supervisor6573_elCesar"
